@@ -52,12 +52,15 @@ if {[istarget "*-*-vxworks"]} {
     return
 }
 
-# powerpc ELF only at the moment.
+# powerpc ELF only at the moment.  Disable for nto too, even though it
+# is ELF, because we pass -melf32ppc to ld and powerpc-nto-ld wants
+# -melf32ppcnto.
 
 if { [istarget "*-*-macos*"] || [istarget "*-*-netware*"]
      || [istarget "*-*-pe"] || [istarget "*-*-winnt*"]
      || [istarget "*-*-cygwin*"] || [istarget "*-*-aix*"]
-     || [istarget "*-*-beos*"] } {
+     || [istarget "*-*-beos*"] || [istarget "*-*-lynxos*"]
+     || [istarget "*-*-nto*"] } {
     return
 }
 
